@@ -10,6 +10,8 @@
 	* po/zh_TW.po: Add zh_TW translation file.
 	* Makefile.am: Add the missing include header gettext.h from
 	/usr/share/gettext/gettext.
+	* src/Makefile.am,
+	src/betaradio.c: Add the necessary work for gettext.
 
 2008-11-28  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
